--- a/4.cellprofiler_analysis/notebooks/run_cellprofiler_pipe_with_sam_outputs.ipynb
+++ b/4.cellprofiler_analysis/notebooks/run_cellprofiler_pipe_with_sam_outputs.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import argparse\n",
+    "import multiprocessing\n",
     "import pathlib\n",
     "import pprint\n",
     "import shutil\n",
     "import sys\n",
+    "\n",
+    "import pandas as pd\n",
     "\n",
     "sys.path.append(\"../../utils/\")\n",
     "import cp_parallel"
@@ -25,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,28 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{   '20231017ChromaLive_6hr_4ch_MaxIP_sam': {   'path_to_images': PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/3b.run_sam/sam2_processing_dir/CP_input'),\n",
-      "                                                'path_to_output': PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/4.cellprofiler_analysis/analysis_output/20231017ChromaLive_6hr_4ch_MaxIP_test_small'),\n",
-      "                                                'path_to_pipeline': PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/4.cellprofiler_analysis/pipelines/analysis_4ch_with_sam.cppipe')},\n",
-      "    'run_20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP': {   'path_to_images': PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/2.cellprofiler_ic_processing/illum_directory/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_test_small'),\n",
-      "                                                                'path_to_output': PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/4.cellprofiler_analysis/analysis_output/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_test_small'),\n",
-      "                                                                'path_to_pipeline': PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/4.cellprofiler_analysis/pipelines/analysis_2ch.cppipe')}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict_of_inputs = {\n",
     "    \"20231017ChromaLive_6hr_4ch_MaxIP_sam\": {\n",
     "        \"path_to_images\": pathlib.Path(f\"{CP_input_dir}\").resolve(),\n",
     "        \"path_to_output\": pathlib.Path(\n",
-    "            f\"{output_dir}/20231017ChromaLive_6hr_4ch_MaxIP_test_small/\"\n",
+    "            f\"{output_dir}/20231017ChromaLive_6hr_4ch_MaxIP/\"\n",
     "        ).resolve(),\n",
     "        \"path_to_pipeline\": pathlib.Path(\n",
     "            \"../pipelines/analysis_4ch_with_sam.cppipe\"\n",
@@ -129,10 +119,10 @@
     "    },\n",
     "    \"run_20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP\": {\n",
     "        \"path_to_images\": pathlib.Path(\n",
-    "            \"../../2.cellprofiler_ic_processing/illum_directory/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_test_small\"\n",
+    "            \"../../2.cellprofiler_ic_processing/illum_directory/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP\"\n",
     "        ).resolve(strict=True),\n",
     "        \"path_to_output\": pathlib.Path(\n",
-    "            f\"{output_dir}/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_test_small/\"\n",
+    "            f\"{output_dir}/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP/\"\n",
     "        ).resolve(),\n",
     "        \"path_to_pipeline\": pathlib.Path(\"../pipelines/analysis_2ch.cppipe\").resolve(),\n",
     "    },\n",
@@ -144,21 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of processes: 2\n",
-      "All processes have been completed!\n",
-      "20231017ChromaLive_6hr_4ch_MaxIP_test_small 0\n",
-      "20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_test_small 0\n",
-      "All results have been converted to log files!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cp_parallel.run_cellprofiler_parallel(\n",
     "    plate_info_dictionary=dict_of_inputs,\n",
@@ -184,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
