--- a/3b.run_sam/notebooks/0.create_db_for_pipe.ipynb
+++ b/3b.run_sam/notebooks/0.create_db_for_pipe.ipynb
@@ -176,21 +176,24 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ArrowInvalid",
-     "evalue": "offset overflow while concatenating arrays",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mArrowInvalid\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 17\u001b[0m\n\u001b[1;32m      2\u001b[0m schema \u001b[38;5;241m=\u001b[39m pa\u001b[38;5;241m.\u001b[39mschema(\n\u001b[1;32m      3\u001b[0m     [\n\u001b[1;32m      4\u001b[0m         pa\u001b[38;5;241m.\u001b[39mfield(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfile_name\u001b[39m\u001b[38;5;124m\"\u001b[39m, pa\u001b[38;5;241m.\u001b[39mstring()),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     14\u001b[0m     ]\n\u001b[1;32m     15\u001b[0m )\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# create the table in the database following the schema\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m tbl \u001b[38;5;241m=\u001b[39m db\u001b[38;5;241m.\u001b[39mcreate_table(\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0.original_images\u001b[39m\u001b[38;5;124m\"\u001b[39m, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moverwrite\u001b[39m\u001b[38;5;124m\"\u001b[39m, data\u001b[38;5;241m=\u001b[39mtiff_df, schema\u001b[38;5;241m=\u001b[39mschema\n\u001b[1;32m     19\u001b[0m )\n",
-      "File \u001b[0;32m~/miniforge3/envs/sam2_env/lib/python3.12/site-packages/lancedb/db.py:417\u001b[0m, in \u001b[0;36mLanceDBConnection.create_table\u001b[0;34m(self, name, data, schema, mode, exist_ok, on_bad_vectors, fill_value, embedding_functions)\u001b[0m\n\u001b[1;32m    414\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmode must be either \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcreate\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moverwrite\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    415\u001b[0m validate_table_name(name)\n\u001b[0;32m--> 417\u001b[0m tbl \u001b[38;5;241m=\u001b[39m LanceTable\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[1;32m    418\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    419\u001b[0m     name,\n\u001b[1;32m    420\u001b[0m     data,\n\u001b[1;32m    421\u001b[0m     schema,\n\u001b[1;32m    422\u001b[0m     mode\u001b[38;5;241m=\u001b[39mmode,\n\u001b[1;32m    423\u001b[0m     exist_ok\u001b[38;5;241m=\u001b[39mexist_ok,\n\u001b[1;32m    424\u001b[0m     on_bad_vectors\u001b[38;5;241m=\u001b[39mon_bad_vectors,\n\u001b[1;32m    425\u001b[0m     fill_value\u001b[38;5;241m=\u001b[39mfill_value,\n\u001b[1;32m    426\u001b[0m     embedding_functions\u001b[38;5;241m=\u001b[39membedding_functions,\n\u001b[1;32m    427\u001b[0m )\n\u001b[1;32m    428\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m tbl\n",
-      "File \u001b[0;32m~/miniforge3/envs/sam2_env/lib/python3.12/site-packages/lancedb/table.py:1551\u001b[0m, in \u001b[0;36mLanceTable.create\u001b[0;34m(cls, db, name, data, schema, mode, exist_ok, on_bad_vectors, fill_value, embedding_functions)\u001b[0m\n\u001b[1;32m   1548\u001b[0m     metadata \u001b[38;5;241m=\u001b[39m registry\u001b[38;5;241m.\u001b[39mget_table_metadata(embedding_functions)\n\u001b[1;32m   1550\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1551\u001b[0m     data, schema \u001b[38;5;241m=\u001b[39m _sanitize_data(\n\u001b[1;32m   1552\u001b[0m         data,\n\u001b[1;32m   1553\u001b[0m         schema,\n\u001b[1;32m   1554\u001b[0m         metadata\u001b[38;5;241m=\u001b[39mmetadata,\n\u001b[1;32m   1555\u001b[0m         on_bad_vectors\u001b[38;5;241m=\u001b[39mon_bad_vectors,\n\u001b[1;32m   1556\u001b[0m         fill_value\u001b[38;5;241m=\u001b[39mfill_value,\n\u001b[1;32m   1557\u001b[0m     )\n\u001b[1;32m   1559\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m schema \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1560\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/miniforge3/envs/sam2_env/lib/python3.12/site-packages/lancedb/table.py:128\u001b[0m, in \u001b[0;36m_sanitize_data\u001b[0;34m(data, schema, metadata, on_bad_vectors, fill_value)\u001b[0m\n\u001b[1;32m    126\u001b[0m         metadata\u001b[38;5;241m.\u001b[39mupdate(data\u001b[38;5;241m.\u001b[39mschema\u001b[38;5;241m.\u001b[39mmetadata \u001b[38;5;129;01mor\u001b[39;00m {})\n\u001b[1;32m    127\u001b[0m         data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mreplace_schema_metadata(metadata)\n\u001b[0;32m--> 128\u001b[0m     data \u001b[38;5;241m=\u001b[39m _sanitize_schema(\n\u001b[1;32m    129\u001b[0m         data, schema\u001b[38;5;241m=\u001b[39mschema, on_bad_vectors\u001b[38;5;241m=\u001b[39mon_bad_vectors, fill_value\u001b[38;5;241m=\u001b[39mfill_value\n\u001b[1;32m    130\u001b[0m     )\n\u001b[1;32m    131\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, Iterable):\n\u001b[1;32m    132\u001b[0m     data \u001b[38;5;241m=\u001b[39m _to_record_batch_generator(\n\u001b[1;32m    133\u001b[0m         data, schema, metadata, on_bad_vectors, fill_value\n\u001b[1;32m    134\u001b[0m     )\n",
-      "File \u001b[0;32m~/miniforge3/envs/sam2_env/lib/python3.12/site-packages/lancedb/table.py:1782\u001b[0m, in \u001b[0;36m_sanitize_schema\u001b[0;34m(data, schema, on_bad_vectors, fill_value)\u001b[0m\n\u001b[1;32m   1780\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data\n\u001b[1;32m   1781\u001b[0m \u001b[38;5;66;03m# cast the columns to the expected types\u001b[39;00m\n\u001b[0;32m-> 1782\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mcombine_chunks()\n\u001b[1;32m   1783\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m field \u001b[38;5;129;01min\u001b[39;00m schema:\n\u001b[1;32m   1784\u001b[0m     \u001b[38;5;66;03m# TODO: we're making an assumption that fixed size list of 10 or more\u001b[39;00m\n\u001b[1;32m   1785\u001b[0m     \u001b[38;5;66;03m# is a vector column. This is definitely a bit hacky.\u001b[39;00m\n\u001b[1;32m   1786\u001b[0m     likely_vector_col \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m   1787\u001b[0m         pa\u001b[38;5;241m.\u001b[39mtypes\u001b[38;5;241m.\u001b[39mis_fixed_size_list(field\u001b[38;5;241m.\u001b[39mtype)\n\u001b[1;32m   1788\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m pa\u001b[38;5;241m.\u001b[39mtypes\u001b[38;5;241m.\u001b[39mis_float32(field\u001b[38;5;241m.\u001b[39mtype\u001b[38;5;241m.\u001b[39mvalue_type)\n\u001b[1;32m   1789\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m field\u001b[38;5;241m.\u001b[39mtype\u001b[38;5;241m.\u001b[39mlist_size \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m   1790\u001b[0m     )\n",
-      "File \u001b[0;32m~/miniforge3/envs/sam2_env/lib/python3.12/site-packages/pyarrow/table.pxi:4289\u001b[0m, in \u001b[0;36mpyarrow.lib.Table.combine_chunks\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/miniforge3/envs/sam2_env/lib/python3.12/site-packages/pyarrow/error.pxi:154\u001b[0m, in \u001b[0;36mpyarrow.lib.pyarrow_internal_check_status\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/miniforge3/envs/sam2_env/lib/python3.12/site-packages/pyarrow/error.pxi:91\u001b[0m, in \u001b[0;36mpyarrow.lib.check_status\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mArrowInvalid\u001b[0m: offset overflow while concatenating arrays"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arrow Table created successfully\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-10-10T20:29:00Z WARN  lance::dataset] No existing dataset at /home/lippincm/Documents/live_cell_timelapse_apoptosis/data/objects_db/0.original_images.lance, it will be created\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table created successfully\n"
      ]
     }
    ],
@@ -210,10 +213,21 @@
     "        pa.field(\"binary_image\", pa.binary()),\n",
     "    ]\n",
     ")\n",
-    "# create the table in the database following the schema\n",
-    "tbl = db.create_table(\n",
-    "    \"0.original_images\", mode=\"overwrite\", data=tiff_df, schema=schema\n",
-    ")"
+    "# Convert DataFrame to Arrow Table\n",
+    "try:\n",
+    "    arrow_table = pa.Table.from_pandas(tiff_df, schema=schema)\n",
+    "    print(\"Arrow Table created successfully\")\n",
+    "except pa.ArrowInvalid as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "\n",
+    "# Create the table in the database\n",
+    "try:\n",
+    "    tbl = db.create_table(\n",
+    "        \"0.original_images\", mode=\"overwrite\", data=arrow_table, schema=schema\n",
+    "    )\n",
+    "    print(\"Table created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")"
    ]
   }
  ],
