fix alpine error

--- a/3b.run_sam/notebooks/1.run_sam2_microscopy.ipynb
+++ b/3b.run_sam/notebooks/1.run_sam2_microscopy.ipynb
@@ -128,17 +128,17 @@
     "    default=\"all\",\n",
     "    help=\"Options: all, tiny, small, base, large\",\n",
     ")\n",
-    "parser.add_argument(\"--downsample\", type=bool, default=False, help=\"Downsample images\")\n",
+    "parser.add_argument(\"--downscale\", type=bool, default=False, help=\"Downsample images\")\n",
     "parser.add_argument(\n",
-    "    \"--downsample_factor\", type=int, default=1, help=\"Downsample factor for images\"\n",
+    "    \"--downscale_factor\", type=int, default=1, help=\"Downsample factor for images\"\n",
     ")\n",
     "\n",
     "# get the arguments\n",
     "args = parser.parse_args()\n",
     "\n",
     "model_to_use = args.model_to_use\n",
-    "downsample = args.downsample\n",
-    "downsample_factor = args.downsample_factor\n",
+    "downscale = args.downscale\n",
+    "downscale_factor = args.downscale_factor\n",
     "\n",
     "\n",
     "# model_to_use = \"tiny\"\n",
