fix job overwriting

--- a/3b.run_sam/notebooks/1.run_sam2_microscopy.ipynb
+++ b/3b.run_sam/notebooks/1.run_sam2_microscopy.ipynb
@@ -899,12 +899,15 @@
     "TIME_FORMAT_STR: str = \"%b_%d_%H_%M_%S\"\n",
     "# delete any prior memory profiling data\n",
     "delete_recorded_memory_history(\n",
-    "    logger=logger, save_dir=pathlib.Path(\"../memory_snapshots/\").resolve()\n",
+    "    logger=logger,\n",
+    "    save_dir=pathlib.Path(\n",
+    "        f\"../memory_snapshots/{model_to_use}_model_{downscale_factor}x_factor/\"\n",
+    "    ).resolve(),\n",
     ")\n",
     "\n",
     "# Keep a max of 100,000 alloc/free events in the recorded history\n",
     "# leading up to the snapshot.\n",
-    "MAX_NUM_OF_MEM_EVENTS_PER_SNAPSHOT: int = 100000000\n",
+    "MAX_NUM_OF_MEM_EVENTS_PER_SNAPSHOT: int = 10000000000\n",
     "start_record_memory_history(\n",
     "    logger=logger, max_entries=MAX_NUM_OF_MEM_EVENTS_PER_SNAPSHOT\n",
     ")"
@@ -3930,7 +3933,10 @@
    "source": [
     "# save the memory snapshot to a file\n",
     "export_memory_snapshot(\n",
-    "    logger=logger, save_dir=pathlib.Path(\"../memory_snapshots/\").resolve()\n",
+    "    logger=logger,\n",
+    "    save_dir=pathlib.Path(\n",
+    "        f\"../memory_snapshots/{model_to_use}_model_{downscale_factor}x_factor/\"\n",
+    "    ).resolve(),\n",
     ")\n",
     "stop_record_memory_history(logger=logger)"
    ]
@@ -4412,11 +4418,14 @@
     "        ax.imshow(frame_image, cmap=\"gray\")\n",
     "        ax.set_title(f\"Frame {out_frame_idx}\")\n",
     "        # save the figure to a file\n",
-    "        fig.savefig(f\"tmp_{out_frame_idx}.png\")\n",
+    "        tmpdir = pathlib.Path(\n",
+    "            sam2_processing_dir / f\"tmp_{out_frame_idx}.png\"\n",
+    "        ).resolve()\n",
+    "        fig.savefig(tmpdir)\n",
     "        # close the figure\n",
     "        plt.close(fig)\n",
     "        # open the image\n",
-    "        img = Image.open(f\"tmp_{out_frame_idx}.png\")\n",
+    "        img = Image.open(tmpdir)\n",
     "        # append the image to the frames\n",
     "        frames.append(img)\n",
     "\n",
