--- a/5.process_CP_features/notebooks/0.merge_sc.ipynb
+++ b/5.process_CP_features/notebooks/0.merge_sc.ipynb
@@ -772,7 +772,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "interstellar_data",
+   "display_name": "cellprofiler_timelapse_env",
    "language": "python",
    "name": "python3"
   },
@@ -786,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   },
   "orig_nbformat": 4
  },
