--- a/2.cellprofiler_ic_processing/notebooks/0.perform_ic.ipynb
+++ b/2.cellprofiler_ic_processing/notebooks/0.perform_ic.ipynb
@@ -152,7 +152,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pe2loaddata",
+   "display_name": "cellprofiler_timelapse_env",
    "language": "python",
    "name": "python3"
   },
@@ -168,12 +168,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.20"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "8e682b7bd16cdbc4be2393bc1b1eed6b87cf8a0c86d477c0593cdffdecdf8222"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
