--- a/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
+++ b/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
@@ -95,26 +95,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # import the arguments\n",
-    "# parser = argparse.ArgumentParser(description=\"Process timelapse images.\")\n",
-    "# parser.add_argument(\n",
-    "#     \"--model_to_use\",\n",
-    "#     type=str,\n",
-    "#     default=\"all\",\n",
-    "#     help=\"Options: all, tiny, small, base, large\",\n",
-    "# )\n",
-    "# parser.add_argument(\n",
-    "#     \"--downscale_factor\", type=int, default=1, help=\"Downsample factor for images\"\n",
-    "# )\n",
+    "# import the arguments\n",
+    "parser = argparse.ArgumentParser(description=\"Process timelapse images.\")\n",
+    "parser.add_argument(\n",
+    "    \"--model_to_use\",\n",
+    "    type=str,\n",
+    "    default=\"all\",\n",
+    "    help=\"Options: all, tiny, small, base, large\",\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"--downscale_factor\", type=int, default=1, help=\"Downsample factor for images\"\n",
+    ")\n",
     "\n",
-    "# # get the arguments\n",
-    "# args = parser.parse_args()\n",
+    "parser.add_argument(\n",
+    "    \"--downscale\", action=\"store_true\", help=\"Downsample the images before processing\"\n",
+    ")\n",
     "\n",
-    "# model_to_use = args.model_to_use\n",
-    "# downscale_factor = args.downscale_factor\n",
+    "# get the arguments\n",
+    "args = parser.parse_args()\n",
     "\n",
-    "model_to_use = \"tiny\"\n",
-    "downscale_factor = 10"
+    "model_to_use = args.model_to_use\n",
+    "downscale_factor = args.downscale_factor\n",
+    "downscale = args.downscale\n",
+    "\n",
+    "# model_to_use = \"tiny\"\n",
+    "# downscale_factor = 10"
    ]
   },
   {
@@ -232,145 +237,6 @@
     "star_dist_dir = pathlib.Path(\n",
     "    f\"../stardist_processing_dir/{downscale_factor}x_factor/star_dist_masks/\"\n",
     ").resolve(strict=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get data formatted correctly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # get the list of tiff files in the directory\n",
-    "# tiff_files = list(tiff_dir.rglob(\"*.tiff\"))\n",
-    "# tiff_file_names = [file.stem for file in tiff_files]\n",
-    "# # files to df\n",
-    "# tiff_df = pd.DataFrame({\"file_name\": tiff_file_names, \"file_path\": tiff_files})\n",
-    "\n",
-    "# # split the file_path column by _ but keep the original column\n",
-    "# tiff_df[\"file_name\"] = tiff_df[\"file_name\"].astype(str)\n",
-    "# tiff_df[[\"Well\", \"FOV\", \"Timepoint\", \"Z-slice\", \"Channel\", \"illum\"]] = tiff_df[\n",
-    "#     \"file_name\"\n",
-    "# ].str.split(\"_\", expand=True)\n",
-    "# tiff_df[\"Well_FOV\"] = tiff_df[\"Well\"] + \"_\" + tiff_df[\"FOV\"]\n",
-    "# # drop all channels except for the first one\n",
-    "# tiff_df = tiff_df[tiff_df[\"Channel\"] == \"C01\"]\n",
-    "# tiff_df = tiff_df.drop(columns=[\"Channel\", \"illum\"])\n",
-    "# tiff_df[\"new_path\"] = (\n",
-    "#     str(ordered_tiffs)\n",
-    "#     + \"/\"\n",
-    "#     + tiff_df[\"Well_FOV\"]\n",
-    "#     + \"/\"\n",
-    "#     + tiff_df[\"file_name\"]\n",
-    "#     + \".tiff\"\n",
-    "# )\n",
-    "# # remove any file name that contain \"F0005\" or \"F0006\"\n",
-    "# print(f\"{tiff_df.shape[0]} prior to removing F0005 and F0006\")\n",
-    "# tiff_df = tiff_df[~tiff_df[\"file_name\"].str.contains(\"F0005\")]\n",
-    "# tiff_df = tiff_df[~tiff_df[\"file_name\"].str.contains(\"F0006\")]\n",
-    "# tiff_df.reset_index(drop=True, inplace=True)\n",
-    "# print(f\"{tiff_df.shape[0]} after removing F0005 and F0006\")\n",
-    "# tiff_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # copy the files to the new directory\n",
-    "# # from file path to new path\n",
-    "# for index, row in tiff_df.iterrows():\n",
-    "#     new_path = pathlib.Path(row[\"new_path\"])\n",
-    "#     new_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "#     shutil.copy(row[\"file_path\"], new_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # get the list of directories in the ordered tiffs directory\n",
-    "# ordered_tiff_dirs = list(ordered_tiffs.glob(\"*\"))\n",
-    "# ordered_tiff_dir_names = [dir for dir in ordered_tiff_dirs]\n",
-    "# ordered_tiff_dir_names\n",
-    "# for dir in ordered_tiff_dir_names:\n",
-    "#     out_dir = converted_to_video_dir / dir.name\n",
-    "#     out_dir.mkdir(parents=True, exist_ok=True)\n",
-    "#     for tiff_file in dir.glob(\"*.tiff\"):\n",
-    "#         jpeg_file = pathlib.Path(f\"{out_dir}/{tiff_file.stem}.jpeg\")\n",
-    "\n",
-    "#         if not jpeg_file.exists():\n",
-    "#             try:\n",
-    "#                 with Image.open(tiff_file) as img:\n",
-    "#                     # Convert the image to 8-bit per channel\n",
-    "#                     img = img.convert(\"L\")\n",
-    "#                     img.save(jpeg_file)\n",
-    "#             except Exception as e:\n",
-    "#                 print(f\"Failed to convert {tiff_file}: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # get list of dirs in the converted to video dir\n",
-    "# converted_dirs = list(converted_to_video_dir.glob(\"*\"))\n",
-    "# converted_dir_names = [dir for dir in converted_dirs]\n",
-    "# for dir in converted_dir_names:\n",
-    "#     dir = sorted(dir.glob(\"*.jpeg\"))\n",
-    "#     for i in enumerate(dir):\n",
-    "#         # rename the files to be in order\n",
-    "#         i[1].rename(f\"{dir[0].parent}/{str(i[0] + 1).zfill(3)}.jpeg\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Donwsample each frame to fit the images on the GPU - overwrite the copies JPEGs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # get files in the directory\n",
-    "# converted_dirs_list = list(converted_to_video_dir.rglob(\"*\"))\n",
-    "# converted_dirs_list = [f for f in converted_dirs_list if f.is_file()]\n",
-    "# # posix path to string\n",
-    "# files = [str(f) for f in converted_dirs_list]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # need to downscale to fit the model and images on the GPU\n",
-    "# # note that this is an arbitrary number and can be changed\n",
-    "# # sort the files by name\n",
-    "# # downsample the image\n",
-    "# for f in files:\n",
-    "#     img = io.imread(f)\n",
-    "#     # downsample the image\n",
-    "#     downsampled_img = img[::downscale_factor, ::downscale_factor]\n",
-    "#     # save the downsampled image in place of the original image\n",
-    "#     io.imsave(f, downsampled_img)"
    ]
   },
   {
