--- a/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
+++ b/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
@@ -707,9 +707,9 @@
    "outputs": [],
    "source": [
     "# loop through each image set and save the predicted masks as images\n",
-    "for i in range(len(star_dist_files[\"image_set_name\"])):\n",
+    "for i in range(len(star_dist_files[\"context_dir\"])):\n",
     "    print(\n",
-    "        f\"{star_dist_files['image_set_name'][i]}: {star_dist_files['image_set_first_frame'][i]}\"\n",
+    "        f\"{star_dist_files['context_dir'][i]}: {star_dist_files['image_set_first_frame'][i]}\"\n",
     "    )\n",
     "    frame_names = sorted(\n",
     "        list(Path(star_dist_files[\"image_set_path\"][i]).glob(\"*.jpeg\"))\n",
@@ -723,7 +723,7 @@
     "    # create a list of all the frames\n",
     "    frames = []\n",
     "\n",
-    "    video_segments = stored_video_segments[star_dist_files[\"image_set_name\"][i]]\n",
+    "    video_segments = stored_video_segments[star_dist_files[\"context_dir\"][i]]\n",
     "    for out_frame_idx in range(0, len(frame_names), 1):\n",
     "        # create a figure\n",
     "        # set the frame path and make the directory if it doesn't exist\n",
@@ -746,9 +746,7 @@
     "                output_dict[\"x\"].append(x)\n",
     "                output_dict[\"y\"].append(y)\n",
     "                output_dict[\"mask_file_name\"].append(f\"{out_frame_idx}.png\")\n",
-    "                output_dict[\"image_set_name\"].append(\n",
-    "                    star_dist_files[\"image_set_name\"][i]\n",
-    "                )\n",
+    "                output_dict[\"image_set_name\"].append(star_dist_files[\"context_dir\"][i])\n",
     "                output_dict[\"mask_path\"].append(masks_dir)\n",
     "\n",
     "        # save the frame image\n",
@@ -757,7 +755,7 @@
     "        frame_image = frame_image.resize((upscale_w, upscale_h), Image.NEAREST)\n",
     "\n",
     "        # convert the frame image to ints\n",
-    "        frame_image_path = f\"{masks_dir}/{star_dist_files['image_set_name'][i]}_T{str(out_frame_idx + 1).zfill(4)}_Z0001_mask.png\"\n",
+    "        frame_image_path = f\"{masks_dir}/{star_dist_files['context_dir'][i]}_T{str(out_frame_idx + 1).zfill(4)}_Z0001_mask.png\"\n",
     "        frame_image.save(frame_image_path)\n",
     "\n",
     "        # add title to the subplot\n",
@@ -778,7 +776,7 @@
     "        frames.append(img)\n",
     "\n",
     "    fig_path = pathlib.Path(\n",
-    "        f\"{gifs_dir}/{star_dist_files['image_set_name'][i]}_out.gif\"\n",
+    "        f\"{gifs_dir}/{star_dist_files['context_dir'][i]}_out.gif\"\n",
     "    ).resolve()\n",
     "    # save the frames as a gif\n",
     "    frames[0].save(\n",
