--- a/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
+++ b/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
@@ -709,7 +709,7 @@
     "# loop through each image set and save the predicted masks as images\n",
     "for i in range(len(star_dist_files[\"context_dir\"])):\n",
     "    print(\n",
-    "        f\"{star_dist_files['context_dir'][i]}: {star_dist_files['image_set_first_frame'][i]}\"\n",
+    "        f\"{star_dist_files['context_dir'][i]}: {star_dist_files['first_frame_image'][i]}\"\n",
     "    )\n",
     "    frame_names = sorted(\n",
     "        list(Path(star_dist_files[\"image_set_path\"][i]).glob(\"*.jpeg\"))\n",
