--- a/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
+++ b/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
@@ -711,9 +711,7 @@
     "    print(\n",
     "        f\"{star_dist_files['context_dir'][i]}: {star_dist_files['first_frame_image'][i]}\"\n",
     "    )\n",
-    "    frame_names = sorted(\n",
-    "        list(Path(star_dist_files[\"image_set_path\"][i]).glob(\"*.jpeg\"))\n",
-    "    )\n",
+    "    frame_names = sorted(list(Path(star_dist_files[\"context_dir\"][i]).glob(\"*.jpeg\")))\n",
     "    img = io.imread(frame_names[0])\n",
     "    h, w = img.shape\n",
     "    upscale_h = h * downscale_factor\n",
