--- a/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
+++ b/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
@@ -753,7 +753,7 @@
     "        frame_image = frame_image.resize((upscale_w, upscale_h), Image.NEAREST)\n",
     "\n",
     "        # convert the frame image to ints\n",
-    "        frame_image_path = f\"{masks_dir}/{star_dist_files['context_dir'][i]}_T{str(out_frame_idx + 1).zfill(4)}_Z0001_mask.png\"\n",
+    "        frame_image_path = f\"{star_dist_files['context_dir'][i]}_T{str(out_frame_idx + 1).zfill(4)}_Z0001_mask.png\"\n",
     "        frame_image.save(frame_image_path)\n",
     "\n",
     "        # add title to the subplot\n",
