--- a/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
+++ b/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
@@ -773,9 +773,7 @@
     "        # append the image to the frames\n",
     "        frames.append(img)\n",
     "\n",
-    "    fig_path = pathlib.Path(\n",
-    "        f\"{gifs_dir}/{star_dist_files['context_dir'][i]}_out.gif\"\n",
-    "    ).resolve()\n",
+    "    fig_path = pathlib.Path(f\"{star_dist_files['context_dir'][i]}_out.gif\").resolve()\n",
     "    # save the frames as a gif\n",
     "    frames[0].save(\n",
     "        fig_path, save_all=True, append_images=frames[1:], duration=10, loop=0\n",
