--- a/3b.run_sam/notebooks/1.run_stardist.ipynb
+++ b/3b.run_sam/notebooks/1.run_stardist.ipynb
@@ -60,23 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # import the arguments\n",
-    "# parser = argparse.ArgumentParser(description=\"Process timelapse images.\")\n",
-    "# parser.add_argument(\n",
-    "#     \"--downscale_factor\", type=int, default=1, help=\"Downsample factor for images\"\n",
-    "# )\n",
+    "# import the arguments\n",
+    "parser = argparse.ArgumentParser(description=\"Process timelapse images.\")\n",
+    "parser.add_argument(\n",
+    "    \"--downscale_factor\", type=int, default=1, help=\"Downsample factor for images\"\n",
+    ")\n",
     "\n",
-    "# # get the arguments\n",
-    "# args = parser.parse_args()\n",
+    "# get the arguments\n",
+    "args = parser.parse_args()\n",
     "\n",
-    "# downscale_factor = args.downscale_factor\n",
-    "\n",
-    "\n",
-    "downscale_factor = 10"
+    "downscale_factor = args.downscale_factor"
    ]
   },
   {
