--- a/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
+++ b/3b.run_sam/notebooks/2.run_sam2_microscopy.ipynb
@@ -102,35 +102,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # import the arguments\n",
-    "# parser = argparse.ArgumentParser(description=\"Process timelapse images.\")\n",
-    "# parser.add_argument(\n",
-    "#     \"--model_to_use\",\n",
-    "#     type=str,\n",
-    "#     default=\"all\",\n",
-    "#     help=\"Options: all, tiny, small, base, large\",\n",
-    "# )\n",
-    "# parser.add_argument(\n",
-    "#     \"--downscale_factor\", type=int, default=1, help=\"Downsample factor for images\"\n",
-    "# )\n",
+    "# import the arguments\n",
+    "parser = argparse.ArgumentParser(description=\"Process timelapse images.\")\n",
+    "parser.add_argument(\n",
+    "    \"--model_to_use\",\n",
+    "    type=str,\n",
+    "    default=\"all\",\n",
+    "    help=\"Options: all, tiny, small, base, large\",\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"--downscale_factor\", type=int, default=1, help=\"Downsample factor for images\"\n",
+    ")\n",
     "\n",
-    "# parser.add_argument(\n",
-    "#     \"--downscale\", action=\"store_true\", help=\"Downsample the images before processing\"\n",
-    "# )\n",
+    "parser.add_argument(\n",
+    "    \"--downscale\", action=\"store_true\", help=\"Downsample the images before processing\"\n",
+    ")\n",
     "\n",
-    "# # get the arguments\n",
-    "# args = parser.parse_args()\n",
+    "# get the arguments\n",
+    "args = parser.parse_args()\n",
     "\n",
-    "# model_to_use = args.model_to_use\n",
-    "# downscale_factor = args.downscale_factor\n",
-    "# downscale = args.downscale\n",
-    "\n",
-    "model_to_use = \"tiny\"\n",
-    "downscale_factor = 10"
+    "model_to_use = args.model_to_use\n",
+    "downscale_factor = args.downscale_factor\n",
+    "downscale = args.downscale"
    ]
   },
   {
