Fix aggregation step (#38)
* precommit

* fix the aggregation step

* process scDINO independently

* addressing comments

--- a/6.process_CP_features/notebooks/5.feature_select_sc.ipynb
+++ b/6.process_CP_features/notebooks/5.feature_select_sc.ipynb
@@ -94,28 +94,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "manual_block_list = [\n",
-    "    \"Nuclei_AreaShape_BoundingBoxArea\",\n",
-    "    \"Nuclei_AreaShape_BoundingBoxMinimum_X\",\n",
-    "    \"Cells_AreaShape_BoundingBoxArea\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Feature selection complete, saving to parquet file!\n",
-      "(168180, 902)\n",
+      "(158431, 901)\n",
       "Feature selection complete, saving to parquet file!\n",
-      "(64656, 537)\n"
+      "(5522, 550)\n"
      ]
     }
    ],
@@ -129,6 +116,13 @@
     "        normalized_df,\n",
     "        operation=feature_select_ops,\n",
     "    )\n",
+    "    manual_block_list = [\n",
+    "        x\n",
+    "        for x in normalized_df.columns\n",
+    "        if \"bounding\" in x.lower()\n",
+    "        or \"Location_Center_Y\" in x.lower()\n",
+    "        or \"Location_Center_X\" in x.lower()\n",
+    "    ]\n",
     "\n",
     "    # add \"Metadata_\" to the beginning of each column name in the list\n",
     "    feature_select_df.columns = [\n",
