--- a/6.process_CP_features/notebooks/6.aggregation.ipynb
+++ b/6.process_CP_features/notebooks/6.aggregation.ipynb
@@ -26,6 +26,7 @@
     "import pathlib\n",
     "import sys\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from pycytominer import aggregate"
    ]
@@ -82,8 +83,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(209311, 847)\n",
-      "(144324, 366)\n"
+      "(389, 873)\n",
+      "(30, 524)\n"
      ]
     }
    ],
@@ -93,7 +94,16 @@
     "    # read in the annotated file\n",
     "    fs_df = pd.read_parquet(paths_dict[data_set][\"input_dir\"])\n",
     "    metadata_cols = fs_df.columns[fs_df.columns.str.contains(\"Metadata\")].to_list()\n",
+    "    selected_metadata_cols = [\n",
+    "        \"Metadata_Well\",\n",
+    "        \"Metadata_plate\",\n",
+    "        \"Metadata_compound\",\n",
+    "        \"Metadata_dose\",\n",
+    "        \"Metadata_control\",\n",
+    "        \"Metadata_Time\",\n",
+    "    ]\n",
     "    feature_cols = fs_df.columns[~fs_df.columns.str.contains(\"Metadata\")].to_list()\n",
+    "    feature_cols = [\"Metadata_number_of_singlecells\"] + feature_cols\n",
     "    if data_set not in \"endpoint_data\":\n",
     "        aggregated_df = aggregate(\n",
     "            fs_df,\n",
@@ -103,7 +113,7 @@
     "        )\n",
     "        aggregated_df = pd.merge(\n",
     "            aggregated_df,\n",
-    "            fs_df[metadata_cols],\n",
+    "            fs_df[selected_metadata_cols],\n",
     "            how=\"left\",\n",
     "            on=[\"Metadata_Well\", \"Metadata_Time\"],\n",
     "        )\n",
@@ -116,7 +126,7 @@
     "        )\n",
     "        aggregated_df = pd.merge(\n",
     "            aggregated_df,\n",
-    "            fs_df[metadata_cols],\n",
+    "            fs_df[selected_metadata_cols],\n",
     "            how=\"left\",\n",
     "            on=[\"Metadata_Well\"],\n",
     "        )\n",
@@ -126,6 +136,11 @@
     "        if col.startswith(\"Metadata_\"):\n",
     "            tmp_pop = aggregated_df.pop(col)\n",
     "            aggregated_df.insert(0, col, tmp_pop)\n",
+    "        if aggregated_df[col].apply(lambda x: isinstance(x, (list, np.ndarray))).any():\n",
+    "            aggregated_df[col] = aggregated_df[col].apply(str)\n",
+    "\n",
+    "    aggregated_df.drop_duplicates(inplace=True, ignore_index=True)\n",
+    "\n",
     "    print(aggregated_df.shape)\n",
     "    aggregated_df.to_parquet(paths_dict[data_set][\"output_file_dir\"])"
    ]
