--- a/3c.segment_cells/notebooks/5.endpoint_manual_alignment.ipynb
+++ b/3c.segment_cells/notebooks/5.endpoint_manual_alignment.ipynb
@@ -13,6 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import tifffile\n",
     "\n",
     "sys.path.append(\"../alignment_utils\")\n",
     "from alignment_utils import align_cross_correlation, apply_alignment\n",
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,11 +104,13 @@
     "    terminal_timepoint_dir / f\"{well_fov}_T0014_Z0001_cell_mask.tiff\"\n",
     ").resolve(strict=True)\n",
     "\n",
-    "final_timepoint_dna = io.imread(str(final_timepoint_dna_path))\n",
-    "terminal_timepoint_dna = io.imread(str(terminal_timepoint_dna_path))\n",
-    "terminal_timepoint_annexin = io.imread(str(terminal_timepoint_annexin_path))\n",
-    "terminal_timepoint_nuclei_mask = io.imread(str(terminal_timepoint_nuclei_mask_path))\n",
-    "terminal_timepoint_cell_mask = io.imread(str(terminal_timepoint_cell_mask_path))"
+    "final_timepoint_dna = tifffile.imread(str(final_timepoint_dna_path))\n",
+    "terminal_timepoint_dna = tifffile.imread(str(terminal_timepoint_dna_path))\n",
+    "terminal_timepoint_annexin = tifffile.imread(str(terminal_timepoint_annexin_path))\n",
+    "terminal_timepoint_nuclei_mask = tifffile.imread(\n",
+    "    str(terminal_timepoint_nuclei_mask_path)\n",
+    ")\n",
+    "terminal_timepoint_cell_mask = tifffile.imread(str(terminal_timepoint_cell_mask_path))"
    ]
   },
   {
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -236,15 +239,17 @@
     ").resolve()\n",
     "\n",
     "\n",
-    "io.imsave(str(aligned_terminal_timepoint_dna_path), aligned_terminal_timepoint_dna)\n",
-    "io.imsave(\n",
+    "tifffile.imwrite(\n",
+    "    str(aligned_terminal_timepoint_dna_path), aligned_terminal_timepoint_dna\n",
+    ")\n",
+    "tifffile.imwrite(\n",
     "    str(aligned_terminal_timepoint_annexin_path), aligned_terminal_timepoint_annexin\n",
     ")\n",
-    "io.imsave(\n",
+    "tifffile.imwrite(\n",
     "    str(aligned_terminal_timepoint_nuclei_mask_path),\n",
     "    aligned_terminal_timepoint_nuclei_mask,\n",
     ")\n",
-    "io.imsave(\n",
+    "tifffile.imwrite(\n",
     "    str(aligned_terminal_timepoint_cell_mask_path), aligned_terminal_timepoint_cell_mask\n",
     ")"
    ]
