--- a/5.cellprofiler_analysis/notebooks/2.copy_cell_mask_over.ipynb
+++ b/5.cellprofiler_analysis/notebooks/2.copy_cell_mask_over.ipynb
@@ -43,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'../../2.cellprofiler_ic_processing/illum_directory/endpoint/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_E-11_F0004/E-11_F0004_T0014_Z0001_cell_mask.tiff'"
+       "PosixPath('/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/2.cellprofiler_ic_processing/illum_directory/endpoint/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_E-11_F0004/E-11_F0004_T0014_Z0001_cell_mask.tiff')"
       ]
      },
      "execution_count": 3,
@@ -58,10 +58,10 @@
     }
    ],
    "source": [
-    "final_timepoint_cell_mask_path = (\n",
+    "final_timepoint_cell_mask_path = pathlib.Path(\n",
     "    f\"../analysis_output/timelapse/{well_fov}/{well_fov}_T0013_Z0001_C04_illumcorrect.tiff\"\n",
     ").resolve(strict=True)\n",
-    "copied_cell_mask_path = (\n",
+    "copied_cell_mask_path = pathlib.Path(\n",
     "    f\"../../2.cellprofiler_ic_processing/illum_directory/endpoint/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_{well_fov}/{well_fov}_T0014_Z0001_cell_mask.tiff\"\n",
     ").resolve(strict=True)\n",
     "\n",
