progress capture for segmentations fixes"

--- a/5.cellprofiler_analysis/notebooks/2.copy_cell_mask_over.ipynb
+++ b/5.cellprofiler_analysis/notebooks/2.copy_cell_mask_over.ipynb
@@ -38,7 +38,7 @@
     "    well_fov = args.well_fov\n",
     "\n",
     "else:\n",
-    "    well_fov = \"E-11_F0004\""
+    "    well_fov = \"C-02_F0004\""
    ]
   },
   {
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/2.cellprofiler_ic_processing/illum_directory/endpoint/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_E-11_F0004/E-11_F0004_T0014_Z0001_cell_mask.tiff')"
+       "PosixPath('/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/2.cellprofiler_ic_processing/illum_directory/endpoint/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_C-02_F0004/C-02_F0004_T0014_Z0001_cell_mask.tiff')"
       ]
      },
      "execution_count": 3,
@@ -63,7 +63,7 @@
     ").resolve(strict=True)\n",
     "copied_cell_mask_path = pathlib.Path(\n",
     "    f\"../../2.cellprofiler_ic_processing/illum_directory/endpoint/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_{well_fov}/{well_fov}_T0014_Z0001_cell_mask.tiff\"\n",
-    ").resolve(strict=True)\n",
+    ").resolve()\n",
     "\n",
     "# copy the cell mask to the terminal timepoint directory\n",
     "shutil.copy(final_timepoint_cell_mask_path, copied_cell_mask_path)"
